Added postInformationFor5LeastBoughtProducts and postInformationFor5MostBoughtProducts
